--- a/0_dev/ivens_craft/contributors_collaborators.html
+++ b/0_dev/ivens_craft/contributors_collaborators.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title> | One More Voice</title><!-- Change -->
+		<title>Contributors and Collaborators | One More Voice</title>
 		<meta name="description" content="" /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
