mv ic folder and u pages

--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title> | One More Voice</title><!-- Change -->
+		<title>Contributors and Collaborators | One More Voice</title>
 		<meta name="description" content="" /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -58,11 +58,11 @@
 			<div id="overlay-menu" class="overlay" data-include="overlay"></div>
 		</header>
 
-		<main id="main" aria-labelledby=""><!-- Change -->
+		<main id="main" aria-labelledby="contributors">
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/main-pages/liv_ZZZZ_0001_deriv-1396px.jpg" srcset="/img/main-pages/liv_ZZZZ_0001_deriv-318px.jpg 318w, /img/main-pages/liv_ZZZZ_0001_deriv-478px.jpg 478w, /img/main-pages/liv_ZZZZ_0001_deriv-636px.jpg 636w, /img/main-pages/liv_ZZZZ_0001_deriv-698px.jpg 698w, /img/main-pages/liv_ZZZZ_0001_deriv-956px.jpg 956w, /img/main-pages/liv_ZZZZ_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/main-pages/liv_027001_0001_deriv-1396px.jpg" srcset="/img/main-pages/liv_027001_0001_deriv-318px.jpg 318w, /img/main-pages/liv_027001_0001_deriv-478px.jpg 478w, /img/main-pages/liv_027001_0001_deriv-636px.jpg 636w, /img/main-pages/liv_027001_0001_deriv-698px.jpg 698w, /img/main-pages/liv_027001_0001_deriv-956px.jpg 956w, /img/main-pages/liv_027001_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Bird's eye view of street, buildings on both sides, people and horse-drawn carriages in the street." />
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -73,7 +73,7 @@
 
 				<div>
 					<span>
-						<h2 id=""></h2><!-- Change -->
+						<h2 id="contributors">Contributors and Collaborators</h2>
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
 						</ul>
@@ -107,7 +107,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/.html">https://onemorevoice.org/html/documents/.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/contributors_collaborators.html">https://onemorevoice.org/html/documents/contributors_collaborators.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -117,7 +117,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Strand.png">Traffic on the Strand, Westminster, London</a>” (Illustration, January 2, 1890), Wikimedia Commons. Public domain.</p>
 
 						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
 					</aside>
