--- a/0_dev/ivens_craft/contributors_collaborators.html
+++ b/0_dev/ivens_craft/contributors_collaborators.html
@@ -108,7 +108,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/contributors_collaborators.html">https://onemorevoice.org/html/ivens-craft/contributors_collaborators.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/contributors_collaborators.html">https://onemorevoice.org/html/ivens-craft/contributors_collaborators.html</a>.</p>
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
