--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Contributors and Collaborators | One More Voice</title>
-		<meta name="description" content="" /><!-- Change -->
+		<meta name="description" content="Cites the names and contributions of the people associated with the “William Ivens Craft and the Victorian Atlantic World” project." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#204A79"/>
@@ -23,7 +23,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
-		<style>.image-wrapper::after{padding-bottom:calc((500/700)*100%)}</style><!-- Change -->
+		<style>.image-wrapper::after{padding-bottom:calc((504/698)*100%)}</style>
 	</head>
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -58,7 +58,7 @@
 			<div id="overlay-menu" class="overlay" data-include="overlay"></div>
 		</header>
 
-		<main id="main" aria-labelledby="contributors">
+		<main id="main" aria-labelledby="contributors-collaborators">
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
@@ -73,7 +73,7 @@
 
 				<div>
 					<span>
-						<h2 id="contributors">Contributors and Collaborators</h2>
+						<h2 id="contributors-collaborators">Contributors and Collaborators</h2>
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
 						</ul>
@@ -93,21 +93,53 @@
 
 					<section class="toc">
 						<ol aria-label="Menu">
-							<li><a href="#"></a></li><!-- Change -->
+							<li><a href="#developers">Developers</a></li>
+							<li><a href="#contributors">Contributors</a></li>
+							<li><a href="#archives">Archives and Websites</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
 					</section>
 
-					<section aria-labelledby=""><!-- Change -->
-						<h3 id=""></h3><!-- Change -->
+					<section aria-labelledby="developers">
+						<h3 id="developers">Developers</h3>
 
+						<ul class="nostyle-list indented-list padded-list">
+							<li><strong>Hope McCaffrey</strong> (Northwestern University, USA) – Lead Project Developer; Lead Historian</li>
+							<li><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln, USA) – Lead Technical  Developer; Lead Advisor</li>
+						</ul>
 					</section>
+
+					<section aria-labelledby="contributors">
+						<h3 id="contributors">Contributors</h3>
+
+						<ul class="nostyle-list indented-list padded-list">
+							<li><strong>Aaisha N. Haykal</strong> (Avery Research Center, College of Charleston, USA) – Contributing Archivist</li>
+							<li><strong>Chris Clark</strong> (UK) – Family Representative and Historian</li>
+							<li><strong>Martin Copeland</strong> (UK) – Family Representative and Historian</li>
+							<li><strong>Eileen Copeland</strong> (UK) – Family Representative and Historian</li>
+							<li><strong>Julia-Ellen Craft Davis</strong> (USA) – Family Representative and Historian</li>
+							<li><strong>Jeffrey Green</strong> (UK) – Contributing Historian</li>
+							<li><strong>Pamela Knight</strong> (UK) – Family Representative and Historian</li>
+							<li><strong>Fay Lock</strong> (UK) – Family Representative and Historian</li>
+							<li><strong>Lucy McCann</strong> (University of Oxford, UK) – Contributing Archivist</li>
+							<li><strong>Garry Walton</strong> (UK) – Contributing Historian</li>
+						</ul>
+					</section>
+
+					<section aria-labelledby="archives">
+						<h3 id="archives">Archives and Websites</h3>
+
+						<!-- <ul class="nostyle-list indented-list padded-list">
+							<li><strong></strong> ()</li>
+							<li><strong></strong> ()</li>
+						</ul> -->
+					</section>					
 
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/contributors_collaborators.html">https://onemorevoice.org/html/documents/contributors_collaborators.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/contributors_collaborators.html">https://onemorevoice.org/html/documents/contributors_collaborators.html</a>.</p>
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
@@ -119,7 +151,7 @@
 
 						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Strand.png">Traffic on the Strand, Westminster, London</a>” (Illustration, January 2, 1890), Wikimedia Commons. Public domain.</p>
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image presents one of London’s main thoroughfares, the Strand, as it appeared in the late nineteenth century, when William Ivens Craft was working and building a life in the city. One of his primary correspondents, Frederick William Chesson, lived on the Strand, and it is likely William Ivens Craft was familiar with this bustling street. The carts, carriages, vendors, and businesses visible in this image indicate the wide range of classes and people that interacted on a daily basis in the crowded city.</p>
 					</aside>
 				</article>
 				<div class="decoration"></div>
