--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -61,6 +61,18 @@
 		</header>
 
 		<main id="main" aria-labelledby="contributors-collaborators">
+
+			<a id="previous-button" class="arrow-button" href="previous.html" aria-label="Previous">
+        <svg id="arrow-left" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+            <path d="M13 24L16.2 20.8L7.4 12L16.2 3.2L13 0L2 11Z" fill="black"/>
+        </svg>
+			</a>
+			<a id="next-button" class="arrow-button" href="next.html" aria-label="Next">
+					<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+							<path d="M13 0L9.8 3.2L18.6 12L9.8 20.8L13 24L24 13Z" fill="black"/>
+					</svg>
+			</a>
+
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
@@ -132,10 +144,14 @@
 					<section aria-labelledby="archives">
 						<h3 id="archives">Archives and Websites</h3>
 
-						<!-- <ul class="nostyle-list indented-list padded-list">
-							<li><strong></strong> ()</li>
-							<li><strong></strong> ()</li>
-						</ul> -->
+						<ul class="nostyle-list indented-list padded-list">
+							<li><a aria-label="External Link" href="https://archive.org/">Internet Archive</a></li>
+							<li><a aria-label="External Link" href="https://avery.cofc.edu/">Avery Research Center, College of Charleston</a> (Charleston, NC, USA)</li>
+							<li><a aria-label="External Link" href="https://www.bodleian.ox.ac.uk/home">Bodleian Library and Archives</a> (Oxford, UK)</li>
+							<li><a aria-label="External Link" href="https://www.loc.gov/">Library of Congress</a> (Washington, D.C., USA)</li>
+							<li>Martin Copeland Personal Archive (South of London, UK)</li>
+							<li><a aria-label="External Link" href="https://commons.wikimedia.org">Wikimedia Commons</a></li>
+						</ul>
 					</section>					
 
 					<aside class="credits" aria-labelledby="citation">
