--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -59,19 +59,21 @@
 			</div>
 			<div id="overlay-menu" class="overlay" data-include="overlay"></div>
 		</header>
-
+		
 		<main id="main" aria-labelledby="contributors-collaborators">
 
-			<a id="previous-button" class="arrow-button" href="previous.html" aria-label="Previous">
-        <svg id="arrow-left" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
-            <path d="M13 24L16.2 20.8L7.4 12L16.2 3.2L13 0L2 11Z" fill="black"/>
-        </svg>
-			</a>
-			<a id="next-button" class="arrow-button" href="next.html" aria-label="Next">
-					<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
-							<path d="M13 0L9.8 3.2L18.6 12L9.8 20.8L13 24L24 13Z" fill="black"/>
+			<div class="arrow-container">
+				<a id="previous-button" class="arrow-button" href="previous.html" aria-label="Previous">
+					<svg id="arrow-left" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+						<path d="M13 24L16.2 20.8L7.4 12L16.2 3.2L13 0L2 11Z" fill="black"/>
 					</svg>
-			</a>
+				</a>
+				<a id="next-button" class="arrow-button" href="next.html" aria-label="Next">
+					<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+						<path d="M13 0L9.8 3.2L18.6 12L9.8 20.8L13 24L24 13Z" fill="black"/>
+					</svg>
+				</a>
+			</div>
 
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
