--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Contributors and Collaborators | One More Voice</title>
+		<title>Contributors & Collaborators | One More Voice</title>
 		<meta name="description" content="Cites the names and contributions of the people associated with the “William Ivens Craft and the Victorian Atlantic World” project." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -40,8 +40,9 @@
 			<nav class="breadcrumbs">
 				<ul>
 					<li id="level-1"><a href="/">Home</a></li>
-					<li id="level-2"><a href="/html/documents.html">Project Documents</a></li>
-					<li id="level-3">Acknowledgments</li>
+					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
+					<li id="level-3"><a href="/html/ivens-crafts/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
+					<li id="level-4">Contributors & Collaborators</li>
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -76,10 +77,11 @@
 
 				<div>
 					<span>
-						<h2 id="contributors-collaborators">Contributors and Collaborators</h2>
+						<h2 id="contributors-collaborators">Contributors & Collaborators</h2>
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
 						</ul>
+						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></p>
 						<figcaption class="caption-icon desktop">
 							<span class="tooltip-container">
 								<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-2" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -146,7 +148,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> “Contributors and Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/contributors_collaborators.html">https://onemorevoice.org/html/documents/contributors_collaborators.html</a>.</p>
+						<p><strong>Cite (MLA):</strong> “Contributors & Collaborators” (2023). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/documents/contributors_collaborators.html">https://onemorevoice.org/html/documents/contributors_collaborators.html</a>.</p>
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
