--- a/html/ivens-craft/contributors_collaborators.html
+++ b/html/ivens-craft/contributors_collaborators.html
@@ -81,7 +81,7 @@
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2023</strong></li>
 						</ul>
-						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></p>
+						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
 						<figcaption class="caption-icon desktop">
 							<span class="tooltip-container">
 								<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-2" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
