--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -650,6 +650,33 @@
 								<figcaption>James Chuma and Abdullah Susi (1874?)</figcaption>
 							</figure>
 
+							<figure class="gallery-item" id="liv_021122">
+								<a href="/html/transcriptions/liv_021122_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021122_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021122_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021122_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021122_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021122_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021122_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021122_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Chuma, standing, with long bow and arrow, beside Susi, with rifle across shoulder." />
+									</div>
+								</a>
+								<figcaption>James Chuma and Abdullah Susi (1874?)</figcaption>
+							</figure>
+
+							<figure class="gallery-item" id="liv_021121">
+								<a href="/html/transcriptions/liv_021121_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021121_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021121_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021121_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021121_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021121_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021121_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021121_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Chuma, seated with legs extended, smoking pipe and being watched by Susi who holds rifle upright." />
+									</div>
+								</a>
+								<figcaption>James Chuma and Abdullah Susi (1874?)</figcaption>
+							</figure>
+							
+							<figure class="gallery-item" id="liv_021123">
+								<a href="/html/transcriptions/liv_021123_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021123_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021123_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021123_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021123_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021123_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021123_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021123_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Chuma, standing, in traditional waist covering, with long bow and arrow." />
+									</div>
+								</a>
+								<figcaption>James Chuma (1874?)</figcaption>
+							</figure>							
+
 							<!-- <figure id="liv_021007">
 								<a href="/html/transcriptions/liv_021007_ART.html">
 									<div class="image-container">
