--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -758,7 +758,13 @@
 
 													<li>David Livingstone, and Unknown Arab and African Informants. <a href="/html/transcriptions/liv_000023_ART.html">Excerpt from David Livingstone’s Notebook with Swahili Vocabulary List and Arabic Numbers</a>. [Between March 1866 and March 1870].</li>
 
+													<li>Maull & Co. <a href="/html/transcriptions/liv_021123_ART.html">James Chuma</a>. [1874?].</li>
+
 													<li>Maull & Co. <a href="/html/transcriptions/liv_021089_ART.html">James Chuma and Abdullah Susi</a>. [1874?].</li>
+
+													<li>Maull & Co. <a href="/html/transcriptions/liv_021121_ART.html">James Chuma and Abdullah Susi</a>. [1874?].</li>
+
+													<li>Maull & Co. <a href="/html/transcriptions/liv_021122_ART.html">James Chuma and Abdullah Susi</a>. [1874?].</li>
 
 													<li>Samuel J. Miller. <a href="/html/transcriptions/liv_021065_ART.html">Frederick Douglass</a>. [c.1847-c.1852].</li>
 
