--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -542,6 +542,15 @@
 								<figcaption>Ranavalona (before 1883)</figcaption>
 							</figure>
 
+							<figure class="gallery-item" id="liv_021124">
+								<a href="/html/transcriptions/liv_021124_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021124_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021124_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021124_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021124_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021124_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021124_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021124_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Half-body portrait of James Read, Jr., facing to his right." />
+									</div>
+								</a>
+								<figcaption>James Read, Jr. (nineteenth-century)</figcaption>
+							</figure>							
+
 							<figure id="liv_021081">
 								<a href="/html/transcriptions/liv_021081_ART.html">
 									<div class="image-container">
