--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -604,6 +604,8 @@
 
 													<li>Anonymous. <a href="/html/transcriptions/liv_021044_ART.html">Jan Tzatzoe (Tshatshu).</a> [Late nineteenth century].</li>
 
+													<li>Anonymous. <a href="/html/transcriptions/liv_021124_ART.html">James Read, Jr.</a> [Nineteenth century].</li>
+
 													<li>Anonymous. “<a href="/html/transcriptions/liv_021074_ART.html">King Moshoeshoe of the Basotho with His Ministers</a>.” [Late nineteenth century].</li>
 
 													<li>Anonymous. “<a href="/html/transcriptions/liv_021073_ART.html">King Moshoeshoe or Moshesh of the Basotho People of Lesotho</a>.” [Late nineteenth century].</li>
