--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -1265,6 +1265,15 @@
 								<figcaption>Abdullah Susi and James Chuma's Model of David Livingstone's Hut (late nineteenth or twentieth century)</figcaption>
 							</figure>
 
+							<figure class="gallery-item" id="liv_021125">
+								<a href="/html/transcriptions/liv_021125_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021125_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021125_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021125_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021125_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021125_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021125_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021125_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Façade of Rabindranath Tagore residence (1912), showing front door, first story, and second story plus blue plaque." />
+									</div>
+								</a>
+								<figcaption>Rabindranath Tagore's House (2022)</figcaption>
+							</figure>
+
 							<figure id="liv_021118">
 								<a href="/html/transcriptions/liv_021118_ART.html">
 									<div class="image-container">
