--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -807,6 +807,8 @@
 													<li>Onoto Watanna. <a href="/html/transcriptions/liv_021038_ART.html">Page Inscribed to Lea W. Lindolph</a>. 17 June 1899.</li>
 
 													<li>White, Sydney Victor. <a href="/html/transcriptions/liv_021100_ART.html">Samuel Ajayi Crowther and Dandeson Crowther.</a> 1870.</li>
+
+													<li>Wisnicki, Adrian S. <a href="/html/transcriptions/liv_021125_ART.html">Rabindranath Tagore's House (1912).</a> 12 June 2022.</li>
 																					
 													<li>Wm. Fergusson & Co. <a href="/html/transcriptions/liv_021001_ART.html">Jacob Wainwright with David Livingstone’s Coffin and Some of Livingstone’s Travelling Trunks on Board the Ship ‘Malwa.’</a> 1874.</li>
 
