--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -839,6 +839,15 @@
 								<figcaption>Tippu Tip (c.1890)</figcaption>
 							</figure>
 
+							<figure class="gallery-item" id="liv_021126">
+								<a href="/html/transcriptions/liv_021126_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021126_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021126_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021126_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021126_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021126_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021126_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021126_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Tippu Tip, seated, facing forward, head turned to his left, holding long sword that touches ground." />
+									</div>
+								</a>
+								<figcaption>Tippu Tip ([c.1890])</figcaption>
+							</figure>
+
 							<figure id="liv_021091">
 								<a href="/html/transcriptions/liv_021091_ART.html">
 									<div class="image-container">
