--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -652,6 +652,8 @@
 
 													<li>Anonymous. <a href="/html/transcriptions/liv_021067_ART.html">Tausé Soga and Her Family</a>. 1894.</li>
 
+													<li>Anonymous. “<a href="/html/transcriptions/liv_021126_ART.html">Tippo-Tip, Vali des Falls [Governor of the Falls]</a>.” [c.1890]; 1892.</li>
+
 													<li>Anonymous. <a href="/html/transcriptions/liv_021070_ART.html">Tiyo Soga (with Facsimile Signature)</a>. [Late nineteenth century].</li>
 
 													<li>Anonymous. <a href="/html/transcriptions/liv_021106_ART.html">Toru, Abju, and Aru Dutt</a>. 1921.</li>
