--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -325,6 +325,24 @@
 								</a>
 								<figcaption>E. Pauline Johnson (1904)</figcaption>
 							</figure>
+
+							<figure class="gallery-item" id="liv_021127">
+								<a href="/html/transcriptions/liv_021127_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021127_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021127_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021127_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021127_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021127_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021127_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021127_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Apolo Kagwa, seated, facing forward." />
+									</div>
+								</a>
+								<figcaption>Apolo Kagwa (1902)</figcaption>
+							</figure>
+
+							<figure id="liv_021016">
+								<a href="/html/transcriptions/liv_021016_ART.html">
+									<div class="image-container">
+										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021016_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021016_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Full-body portrait of Ham Mukasa, facing forward, and Apolo Kagwa, in three-quarters profile." />
+									</div>
+								</a>
+								<figcaption>Ham Mukasa and Apolo Kagwa (early twentieth century)</figcaption>
+							</figure>
 						
 							<figure id="liv_021011">
 								<a href="/html/transcriptions/liv_021011_ART.html">
@@ -332,7 +350,7 @@
 										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021011_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021011_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021011_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021011_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021011_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021011_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021011_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Apolo Kagwa and his son, both seated at a table; Kagwa holds a pen above a notebook." />
 									</div>
 								</a>
-								<figcaption>Apolo Kagwa, Katikiro of Uganda, and His Son (early twentieth century)</figcaption>
+								<figcaption>Apolo Kagwa and His Son (early twentieth century)</figcaption>
 							</figure>
 							
 							<figure id="liv_021021">
@@ -450,15 +468,6 @@
 									</div>
 								</a>
 								<figcaption>Moshoeshoe I (late nineteenth century)</figcaption>
-							</figure>
-
-							<figure id="liv_021016">
-								<a href="/html/transcriptions/liv_021016_ART.html">
-									<div class="image-container">
-										<img width="187.125" height="187.125" loading="lazy" src="/img/visual-materials/thumbnails/liv_021016_0001_thumbnail-572px.jpg" srcset="/img/visual-materials/thumbnails/liv_021016_0001_thumbnail-572px.jpg 572w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-398px.jpg 398w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-378px.jpg 378w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-286px.jpg 286w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-199px.jpg 199w, /img/visual-materials/thumbnails/liv_021016_0001_thumbnail-189px.jpg 189w" sizes="(min-width: 992px) 182px, (min-width: 768px) 169px, (min-width: 640px) calc(33.33vw - 53px), (min-width: 480px) calc(50vw - 49px), calc(100vw - 42px)" alt="Full-body portrait of Ham Mukasa, facing forward, and Apolo Kagwa, in three-quarters profile." />
-									</div>
-								</a>
-								<figcaption>Ham Mukasa and Apolo Kagwa (early twentieth century)</figcaption>
 							</figure>
 
 							<figure>
