u sitemap for ak

--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -571,6 +571,8 @@
 													<li>Anonymous. <a href="/html/transcriptions/liv_021010_ART.html">Abdullah Susi and James Chuma's Model of the Hut in which David Livingstone Died</a>. [Late nineteenth or twentieth century].</li>
 
 													<li>Anonymous. <a href="/html/transcriptions/liv_021005_ART.html">Abdullah Susi (Mislabeled Jacob Wainwright)</a>. [c.1874].</li>
+
+													<li>Alexander Bassano. <a href="/html/transcriptions/liv_021127_ART.html">Apolo Kagwa</a>. 1902.</li>
 											
 													<li>Anonymous. “<a href="/html/transcriptions/liv_021011_ART.html">Apolo Kagwa, Katikiro of Uganda, and His Son</a>”; “<a href="/html/transcriptions/liv_021011_ART.html">Ham Mukasa, with Father, Wife, and Children</a>.” [Early twentieth century], [early twentieth century].</li>
 
