--- a/html/bibliography.html
+++ b/html/bibliography.html
@@ -197,7 +197,7 @@
 							<h4 id="original-books">Published books and book chapters</h4>
 
 							<ul class="nostyle-list noindent-list padded-list">
-								<li>Aga, Selim. <em><a aria-label="External Link" href="https://www.google.com/books/edition/Africa_considered_in_its_social_and_poli/oyW31xYbrjoC?hl=en">Africa Considered in Its Social and Political Condition with a Plan for the Amelioration of Its Inhabitants. By a Native of Darfour, Central Africa, and Originally a Slave</a></em>. London: British Museum, 1853.</li>
+								<!-- <li>Aga, Selim. <em><a aria-label="External Link" href="https://www.google.com/books/edition/Africa_considered_in_its_social_and_poli/oyW31xYbrjoC?hl=en">Africa Considered in Its Social and Political Condition with a Plan for the Amelioration of Its Inhabitants. By a Native of Darfour, Central Africa, and Originally a Slave</a></em>. London: British Museum, 1853.</li> -->
 
 								<li>Baptista, P.J., and Amaro José. “<a aria-label="External Link" href="https://archive.org/details/landsofcazembela00roya/page/164/mode/2up">Journey of the Pombeiros: P. J. Baptista and Amaro José, Across Africa from Angola to Tette on the Zambeze</a>.” In <em>The Lands of Cazembe: Lacerda’s Journey to Cazembe in 1798</em>, by Richard Francis Burton, translated by B.A. Beadle, 165–244. London: John Murray, 1873.</li>
 
@@ -210,6 +210,8 @@
 								<li>Dorugu. “The Life and Travels of Dorugu.” In <em>West African Travels and Adventures: Two Autobiographical Narratives from West Africa</em>, edited by Anthony Kirk-Greene and Paul Newman, translated by Paul Newman, 27–129. New Haven, CT; London: Yale University Press, 1971.</li>
 
 								<li>Maimaina of Jega. “The Story of Maimaina of Jega, Chief of Askira, As Told by Himself.” In <em>West African Travels and Adventures: Two Autobiographical Narratives from West Africa</em>, edited by Anthony Kirk-Greene and Paul Newman, translated by Anthony Kirk-Greene, 131–201. New Haven, CT; London: Yale University Press, 1971.</li>
+
+								<li>Makulo, Disasi. “The Life of Disasi Makulo (c.1940).” In <em>Heart of Darkness</em>, by Joseph Conrad, 201–10. edited by D.C.R.A. Goonetilleke, translated by Genevieve Kirk and Ian Johnston. Peterborough, Ontario, Canada: Broadview Editions, 2020.</li>
 
 								<li>Mgadla, Part T., and Stephen C. Volz, eds. and trans. <em>Words of Batswana: Letters to Mahoko a Becwana, 1883-1896</em>. Cape Town: Van Riebeeck Society, 2006.</li>
 
