--- a/html/bibliography.html
+++ b/html/bibliography.html
@@ -173,6 +173,8 @@
 						
 								<li>Moshoeshoe, Nehemiah Sekhonyana. “Report to the Directors of the London Missionary Society.” Unpublished manuscript, 1842. CWM/LMS, Incoming correspondence, 18B/5/C. University of London. School of Oriental and African Studies, London.</li>
 
+								<li>Mukasa, Ham. “<a aria-label="External Link" href="https://www.loc.gov/resource/gdcwdl.wdl_13832/?sp=113&r=-1.225,-0.303,3.448,1.498,0">Speke at the Court of Mutesa I</a>.” Uganda Journal 26, no. 1 (March 1962): 97–99.</li>
+
 								<li>Read, James, Jr. “Report to the Directors of the London Missionary Society.” Unpublished manuscript, 1838. CWM/LMS, Incoming correspondence, 16A/2/C. University of London. School of Oriental and African Studies, London.</li>
 		
 								<li>Saleh Bin Osman. Letter to Henry M. Stanley. Unpublished manuscript. Zanzibar, June 15, 1891. Henry M. Stanley Archives, 3775. Musée Royal de l’Afrique Centrale, Tervuren.</li>
