--- a/html/materials/books.html
+++ b/html/materials/books.html
@@ -1133,7 +1133,17 @@
 
 										<li>De Sélincourt, Hugh. <em><a aria-label="External Link" href="https://archive.org/details/oxfordfromwithin00desrich/page/n7/mode/2up">Oxford from Within</a></em>. Philadelphia: George W. Jacobs & Co., 1910. <em>Illustrated by Yoshio Markino.</em></li>
 
+										<li>Hyatt, A.H. <em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=njp.32101067294932&view=1up&seq=9&skin=2021">The Charm of London: An Anthology</a></em>. London: Chatto & Windus, 1912. <em>Illustrated by Yoshio Markino.</em></li>
+
+										<li>Loftie, W.J. <em>The Colour of London</em>. London: Chatto & Windus, 1907. <em>Illustrated by Yoshio Markino.</em></li>
+										
+										<li>Messieurs les Académiciens Goncourt. <em><a aria-label="External Link" href="https://archive.org/details/cihm_65183/page/n11/mode/2up">The Colour of Paris</a></em>. Edited by Lucien Descaves. Toronto: Musson, 1908. <em>Illustrated by Yoshio Markino.</em></li>
+
+										<li>Noguchi, Yone. <em><a aria-label="External Link" href="https://archive.org/details/storyofyonenoguc00nogurich/page/n7/mode/2up">The Story of Yone Noguchi: Told by Himself</a></em>. Philadelphia: George W. Jacobs & Co., 1915. <em>Illustrated by Yoshio Markino.</em></li>
+
 										<li>Potter, Olave M. <em><a aria-label="External Link" href="https://archive.org/details/littlepilgrimage00pottuoft">A Little Pilgrimage in Italy</a></em>. Toronto: The Musson Book Company Limited, 1913. <em>Illustrated by Yoshio Markino.</em></li>
+
+										<li>Potter, Olave M. <em><a aria-label="External Link" href="https://archive.org/details/cihm_85717/page/n11/mode/2up">The Colour of Rome</a></em>. Toronto: The Musson Book Company Limited, 1913. <em>Illustrated by Yoshio Markino.</em></li>
 
 										<li>Sladen, Douglas. <em><a aria-label="External Link" href="https://archive.org/details/twentyyearsofmyl00slad">Twenty Years of My Life</a></em>. New York: E.P. Dutton & Company, 1913. <em>Illustrated by Yoshio Markino.</em></li>						
 									</ol>
