--- a/html/materials/visual_materials.html
+++ b/html/materials/visual_materials.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>Visual Materials | One More Voice</title>
-		<meta name="description" content="Presents visual materials relevant to One More Voice including images of the creators featured on the site, manuscripts, and creative works like paintings."/>
+		<meta name="description" content="Presents visual materials relevant to One More Voice including images of the creators featured on the site, manuscripts, and objects."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#204A79"/>
@@ -96,7 +96,7 @@
 							<li><a href="#overview">Overview</a></li>
 							<li><a href="#creator">Creator Images</a></li>
 							<li><a href="#manuscripts">Manuscripts</a></li>
-							<li><a href="#creative">Creative Works</a></li>
+							<li><a href="#objects">Objects</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
 						</ol>
@@ -105,7 +105,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
 
-						<p>This section presents a selection of visual materials relevant to <em>One More Voice</em> and so complements the items found on the pages for <a href="/html/materials/texts.html">recovered texts</a>, <a href="/html/materials/books.html">book-length works</a>, and <a href="/html/materials/motion_pictures.html">motions pictures</a>. The section includes <a href="#creator">images</a> (photographs and illustrations) of the creators featured on the site, a small number of relevant <a href="#manuscripts">manuscripts</a>, and an assortment of <a href="#creative">creative works</a> (paintings, photographs, other material objects), including works by contemporaneous artists from around the globe. Creator images are arranged alphabetically by subject, while manuscripts and creatives works are organized by creator. For each item, the page provides a thumbnail image that links to the full documentary record for the given item and to a larger-resolution, uncropped version of the item image.</p>
+						<p>This section presents a selection of visual materials relevant to <em>One More Voice</em> and so complements the items found on the pages for <a href="/html/materials/texts.html">recovered texts</a>, <a href="/html/materials/books.html">book-length works</a>, and <a href="/html/materials/motion_pictures.html">motions pictures</a>. The section includes <a href="#creator">images</a> (photographs and illustrations) of the creators featured on the site, a small number of relevant <a href="#manuscripts">manuscripts</a>, and an assortment of <a href="#objects">objects</a> (paintings, photographs, other objects), including works by contemporaneous artists from around the globe. Creator images are arranged alphabetically by subject, while manuscripts and creatives works are organized by creator. For each item, the page provides a thumbnail image that links to the full documentary record for the given item and to a larger-resolution, uncropped version of the item image.</p>
 					</section>
 				</article>
 				<div class="decoration"></div>
@@ -1162,8 +1162,8 @@
 						</section>
 					</section>
 
-					<section aria-labelledby="creative">
-						<h3 id="creative">Creative Works</h3>
+					<section aria-labelledby="objects">
+						<h3 id="objects">Objects</h3>
 
 						<section class="visuals gallery">
 							<figure id="liv_021095">
